--- a/RealEstateBusiness/Views/Business/CreateOwner.cshtml
+++ b/RealEstateBusiness/Views/Business/CreateOwner.cshtml
@@ -10,6 +10,11 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>CreateOwner</title>
+    <style>
+        .text-danger {
+            color:red;
+        }
+    </style>
 </head>
 <body>
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
