--- a/RealEstateBusiness/Views/Home/RentInBranch.cshtml
+++ b/RealEstateBusiness/Views/Home/RentInBranch.cshtml
@@ -15,7 +15,7 @@
 <body>
     <div>
         @{int count = 0;}
-        <h1>Number of Buildings Managed by the Branche</h1>
+        <h1>Number of Buildings Managed by the Branch</h1>
         @foreach (Rent rent in Model)
         {
             count = count + 1;
