--- a/RealEstateBusiness/Views/Rent/Create.cshtml
+++ b/RealEstateBusiness/Views/Rent/Create.cshtml
@@ -12,11 +12,6 @@
     <title>Create</title>
 </head>
 <body>
-    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
-    <script src="~/Scripts/jquery.validate.min.js"></script>
-    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
-    
-    
     @using (Html.BeginForm()) 
     {
         @Html.AntiForgeryToken()
@@ -68,7 +63,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.OwnerRef, "OwnerRef", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.DropDownList("OwnerRef", null, htmlAttributes: new { @class = "form-control" })
+                    @Html.DropDownListFor(model => model.OwnerRef, new SelectList(ViewBag.OwnerDetails, "OwnerNo", "FName"), "Select Owner")
                     @Html.ValidationMessageFor(model => model.OwnerRef, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -76,7 +71,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.StaffRef, "StaffRef", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.DropDownList("StaffRef", null, htmlAttributes: new { @class = "form-control" })
+                    @Html.DropDownListFor(model => model.StaffRef, new SelectList(ViewBag.StaffDetails, "StaffNo", "FName"), "Select Staff")
                     @Html.ValidationMessageFor(model => model.StaffRef, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -84,7 +79,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.BranchRef, "BranchRef", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.DropDownList("BranchRef", null, htmlAttributes: new { @class = "form-control" })
+                    @Html.DropDownListFor(model => model.BranchRef, new SelectList(ViewBag.BranchDetails, "BranchNo", "BranchNo"), "Select Branch")
                     @Html.ValidationMessageFor(model => model.BranchRef, "", new { @class = "text-danger" })
                 </div>
             </div>
