--- a/RealEstateBusiness/Views/Rent/Create.cshtml
+++ b/RealEstateBusiness/Views/Rent/Create.cshtml
@@ -61,7 +61,7 @@
             </div>
     
             <div class="form-group">
-                @Html.LabelFor(model => model.OwnerRef, "OwnerRef", htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.OwnerRef, "Owner", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.DropDownListFor(model => model.OwnerRef, new SelectList(ViewBag.OwnerDetails, "OwnerNo", "FName"), "Select Owner")
                     @Html.ValidationMessageFor(model => model.OwnerRef, "", new { @class = "text-danger" })
@@ -69,7 +69,7 @@
             </div>
     
             <div class="form-group">
-                @Html.LabelFor(model => model.StaffRef, "StaffRef", htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.StaffRef, "Staff", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.DropDownListFor(model => model.StaffRef, new SelectList(ViewBag.StaffDetails, "StaffNo", "FName"), "Select Staff")
                     @Html.ValidationMessageFor(model => model.StaffRef, "", new { @class = "text-danger" })
@@ -77,7 +77,7 @@
             </div>
     
             <div class="form-group">
-                @Html.LabelFor(model => model.BranchRef, "BranchRef", htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.BranchRef, "Branch", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.DropDownListFor(model => model.BranchRef, new SelectList(ViewBag.BranchDetails, "BranchNo", "BranchNo"), "Select Branch")
                     @Html.ValidationMessageFor(model => model.BranchRef, "", new { @class = "text-danger" })
