--- a/RealEstateBusiness/Views/Staff/Create.cshtml
+++ b/RealEstateBusiness/Views/Staff/Create.cshtml
@@ -69,7 +69,7 @@
             </div>
     
             <div class="form-group">
-                @Html.LabelFor(model => model.BranchRef, "BranchRef", htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.BranchRef, "Branch", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.DropDownListFor(model => model.BranchRef, new SelectList(ViewBag.BranchDetails, "BranchNo", "BranchNo"), "Select Branch")
                     @Html.ValidationMessageFor(model => model.BranchRef, "", new { @class = "text-danger" })
