--- a/RealEstateBusiness/Views/Branch/Index.cshtml
+++ b/RealEstateBusiness/Views/Branch/Index.cshtml
@@ -10,6 +10,18 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
+    <style>
+        body {
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            font-size:20px;
+            color: cadetblue;
+        }
+
+        th, td {
+            border:1px solid;
+            border-color:cadetblue;
+        }
+    </style>
 </head>
 <body>
     <p>
@@ -18,6 +30,9 @@
     </p>
     <table class="table">
         <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.BranchNo)
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.Street)
             </th>
@@ -32,6 +47,9 @@
     
     @foreach (var item in Model) {
         <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.BranchNo)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Street)
             </td>
