--- a/RealEstateBusiness/Views/Home/Index.cshtml
+++ b/RealEstateBusiness/Views/Home/Index.cshtml
@@ -10,24 +10,38 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
+    <style>
+        div {
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            color:cadetblue;
+        }
+        button {
+            background-color:transparent;
+            padding:15px;
+            text-align:center;
+            font-size:16px;
+            border-color:cadetblue;
+        }
+    </style>
 </head>
 <body>
     <div> 
         <h1>Real Estate Business</h1>
         <p>
         CRUD Operations <br>
-        @Html.ActionLink("Branch", "Index", "Branch")
-        @Html.ActionLink("Owner", "Index", "Owner")
-        @Html.ActionLink("Staff", "Index", "Staff")
-        @Html.ActionLink("Rent", "Index", "Rent")
+        <button>@Html.ActionLink("Branch", "Index", "Branch")</button>
+        <button>@Html.ActionLink("Owner", "Index", "Owner")</button>
+        <button>@Html.ActionLink("Staff", "Index", "Staff")</button>
+        <button>@Html.ActionLink("Rent", "Index", "Rent")</button>
         </p>
         <p>
         Others
-        @Html.ActionLink("Filter the staff based on their position", "Position")
         <br>
-        @Html.ActionLink("Number of buildings managed by each branch", "Branch")
+        <button>@Html.ActionLink("Filter the staff based on their position", "Position")</button>
         <br>
-        @Html.ActionLink("Filter the buildings by city", "City")
+        <button>@Html.ActionLink("Number of buildings managed by each branch", "Branch")</button>
+        <br>
+        <button>@Html.ActionLink("Filter the buildings by city", "City")</button>
         </p>
     </div>
 </body>
