--- a/RealEstateBusiness/Views/Home/RentInCity.cshtml
+++ b/RealEstateBusiness/Views/Home/RentInCity.cshtml
@@ -11,6 +11,12 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>RentInCity</title>
+    <style>
+        div {
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            color: cadetblue;
+        }
+    </style>
 </head>
 <body>
     <div>
