--- a/RealEstateBusiness/Views/Owner/Index.cshtml
+++ b/RealEstateBusiness/Views/Owner/Index.cshtml
@@ -10,13 +10,29 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
+    <style>
+        body {
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            font-size: 20px;
+            color: cadetblue;
+        }
+
+        th, td {
+            border: 1px solid;
+            border-color: cadetblue;
+        }
+    </style>
 </head>
 <body>
     <p>
+        <h1>Owners</h1>
         @Html.ActionLink("Create New", "Create")
     </p>
     <table class="table">
         <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.OwnerNo)
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.FName)
             </th>
@@ -34,6 +50,9 @@
     
     @foreach (var item in Model) {
         <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.OwnerNo)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.FName)
             </td>
