--- a/RealEstateBusiness/Views/Staff/Delete.cshtml
+++ b/RealEstateBusiness/Views/Staff/Delete.cshtml
@@ -10,6 +10,13 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Delete</title>
+    <style>
+        body {
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            font-size: 20px;
+            color: cadetblue;
+        }
+    </style>
 </head>
 <body>
     <h3>Are you sure you want to delete this?</h3>
