--- a/RealEstateBusiness/Views/Staff/Details.cshtml
+++ b/RealEstateBusiness/Views/Staff/Details.cshtml
@@ -10,6 +10,13 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Details</title>
+    <style>
+        body {
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            font-size: 20px;
+            color: cadetblue;
+        }
+    </style>
 </head>
 <body>
     <div>
