--- a/RealEstateBusiness/Views/Staff/Index.cshtml
+++ b/RealEstateBusiness/Views/Staff/Index.cshtml
@@ -10,13 +10,29 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
+    <style>
+        body {
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            font-size: 20px;
+            color: cadetblue;
+        }
+
+        th, td {
+            border: 1px solid;
+            border-color: cadetblue;
+        }
+    </style>
 </head>
 <body>
     <p>
+        <h1>Staffs</h1>
         @Html.ActionLink("Create New", "Create")
     </p>
     <table class="table">
         <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.StaffNo)
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.Branch.Street)
             </th>
@@ -35,11 +51,17 @@
             <th>
                 @Html.DisplayNameFor(model => model.Salary)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.BranchRef)
+            </th>
             <th></th>
         </tr>
     
     @foreach (var item in Model) {
         <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.StaffNo)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Branch.Street)
             </td>
@@ -57,6 +79,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Salary)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.BranchRef)
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id=item.StaffNo }) |
